# OpenCL-Experiments

./: .gitignore  CMakeLists.txt  Makefile  main.c  plugin.c
